Fix alignment on h3

--- a/assets/css/spec.scss
+++ b/assets/css/spec.scss
@@ -19,7 +19,7 @@ p {
 code {
   @apply bg-gray-100 p-1;
 }
-h3, h4 > code {
+h3 > code, h4 > code {
   @apply font-semibold p-1;
 }
 h3 > code {
